assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    /* more on this crazy alphanumerical value in a minute!*/
    color: #39a6b2;
    font-family: Helvetica, Arial, sans-serif;
   }
/* apply styles to <header> */
header {
    padding: 20px 35px;
    background-color: #39a6b2;
}
header h1 {
    font-weight: bold;
    font-size: 36px;
    color: #fce138;
    margin: 0;
    display: inline;
}
header a {
    text-decoration: none;
    color: #fce138;
}
header nav {
    float: right;
    margin: 7px 0;
}
header nav ul li {
    display: inline;
}
header nav ul li a {
    margin: 0 30px;
    font-weight: lighter;
    font-size: 22px;
}
footer {
    background: #fce138;
    width: 100%;
    padding: 40px 35px;
}
footer h2 {
    display: inline;
    color: #024e76;
    font-size: 30px;
    margin: 0;
}
footer div {
    float: right;
    line-height: 1.5;
    text-align: right;
}
footer a {
    color: #024e76;
}
section {
    padding: 60px;
}
/* Hero Style Start */
.hero {
    background-image: url("../images/hero-bg.jpg");
    height: 600px;
    background-size: cover;
    background-position: center;
    position: relative;
}
/* Hero Style End */

.hero-form {
    border: solid 3px #024e76;
    background-color: #fce138;
    padding: 20px;
    width: 500px;
    color: #024e76;
    position: absolute;
    bottom: 120px;
    right: 140px;
}
.hero-form h3 {
    font-size: 24px;
    margin: 0;
}

.hero-form p {
    margin: 5px 0 15px 0;
}

.form-input {
    border: 1px solid #024e76;
    display: block;
    padding: 7px 15px;
    font-size: 16px;
    color: #024e76;
    width: 100%;
    margin-bottom: 15px;
}

.hero-form label {
    margin: 0 5px;
}

.hero-form button {
    color: #fce138;
    background-color: #024e76;
    border: none;
    padding: 10px 20px;
    font-size: 16px;
}

